; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/fw/extr_paging.c_iwl_save_fw_paging.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/fw/extr_paging.c_iwl_save_fw_paging.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_fw_runtime = type { i32 }
%struct.fw_img = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwl_fw_runtime*, %struct.fw_img*)* @iwl_save_fw_paging to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwl_save_fw_paging(%struct.iwl_fw_runtime* %0, %struct.fw_img* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.iwl_fw_runtime*, align 8
  %5 = alloca %struct.fw_img*, align 8
  %6 = alloca i32, align 4
  store %struct.iwl_fw_runtime* %0, %struct.iwl_fw_runtime** %4, align 8
  store %struct.fw_img* %1, %struct.fw_img** %5, align 8
  %7 = load %struct.iwl_fw_runtime*, %struct.iwl_fw_runtime** %4, align 8
  %8 = load %struct.fw_img*, %struct.fw_img** %5, align 8
  %9 = call i32 @iwl_alloc_fw_paging_mem(%struct.iwl_fw_runtime* %7, %struct.fw_img* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.iwl_fw_runtime*, %struct.iwl_fw_runtime** %4, align 8
  %16 = load %struct.fw_img*, %struct.fw_img** %5, align 8
  %17 = call i32 @iwl_fill_paging_mem(%struct.iwl_fw_runtime* %15, %struct.fw_img* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %12
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @iwl_alloc_fw_paging_mem(%struct.iwl_fw_runtime*, %struct.fw_img*) #1

declare dso_local i32 @iwl_fill_paging_mem(%struct.iwl_fw_runtime*, %struct.fw_img*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
